# Bank_System_Project

./: README.md
System/Application/: CMakeLists.txt  List.c  List.h  main.c
System/DS/List/: list.c  list.h
System/DataBase/Data/: AccountData.txt  TransactionData.txt
System/DataBase/File_Handling/: FileHandling.c  FileHandling.h
System/PaymentSystem/Card/: Card.c  Card.h
System/PaymentSystem/Server/: Server.c  Server.h
System/PaymentSystem/Terminal/: Terminal.c  Terminal.h
